# tomegane

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: MINIBOOK.md
scripts/: release.sh
src/: analysis.rs  cli.rs  error.rs  lib.rs  main.rs  setup.rs
src/extract/: diff.rs  ffmpeg.rs  mod.rs
src/mcp/: handlers.rs  mod.rs  protocol.rs
src/output/: schema.rs
tests/: integration_test.rs
