[package]
name = "tomegane"
version = "0.1.0"
edition = "2024"
description = "The remote-seeing eye for AI agents — extract smart frames from screen recordings"
license = "MIT"
repository = "https://github.com/yomete/tomegane"
keywords = ["video", "frames", "mcp", "ai", "screen-recording"]
categories = ["command-line-utilities", "multimedia::video"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rayon = "1"
tempfile = "3"
